# openGL_renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/: Application.h  CMakeLists.txt  assimpInstanceLoader.cpp  rendererApp.cpp  rendererApp.h
application/camera/: camera.cpp  camera.h  gameCameraControl.cpp  gameCameraControl.h  orthographicCamera.cpp  perspectiveCamera.cpp
application/gui/: gui_system.cpp  gui_system.h  i_gui_panel.h  lighting_panel.cpp  lighting_panel.h  rendering_panel.cpp  rendering_panel.h  scene_panel.cpp  scene_panel.h
docs/: project_rendering_summary.md
glframework/: CMakeLists.txt  geometry.cpp  geometry.h  object.cpp  object.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  texture.cpp  texture.h
glframework/framebuffer/: framebuffer.cpp  framebuffer.h
glframework/ibl/: IBLGenerator.cpp  IBLGenerator.h
glframework/light/: directionalLight.cpp  pointLight.cpp  pointLight.h  spotLight.h
glframework/material/: cubeMaterial.cpp  cubeMaterial.h  depthMaterial.cpp  depthMaterial.h  grassInstanceMaterial.cpp  grassInstanceMaterial.h  material.h  opacityMaskMaterial.cpp  opacityMaskMaterial.h  phongEnvMaterial.cpp  phongEnvMaterial.h  phongInstanceMaterial.cpp  phongInstanceMaterial.h  phongMaterial.cpp  phongMaterial.h  screenMaterial.cpp  screenMaterial.h  whiteMaterial.cpp  whiteMaterial.h
glframework/mesh/: instancedMesh.cpp  instancedMesh.h  mesh.cpp  mesh.h
glframework/renderer/: bloom.cpp  bloom.h  debug_axis.cpp  debug_axis.h  (+16 more)
imgui/: CMakeLists.txt
wrapper/: CMakeLists.txt  checkError.cpp
(+81 files in other folders)
